--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>Hello!</head>
-    <body>Hey!</body>
+    <head><title>Hello!</title></head>
+    <body><h1>Welocome to my Website!</h1>Hey!</body>
 </html>
