--- a/hello.html
+++ b/hello.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
     <head><title>Hello!</title></head>
-    <body><h1>Welcome to my Website!</h1>Hey!<h2>Practice</h2></body>
+    <body><h1 style="color:blue;">Welcome to my Website!</h1>Hey!<h2>Practice</h2></body>
 </html>
